--- a/src/app/views/pages/score/registro-score/registro-score.component.html
+++ b/src/app/views/pages/score/registro-score/registro-score.component.html
@@ -76,7 +76,7 @@
 
         <div class="flex-1"></div>
         <div class="mt-2" style="color: #bb96ff; font-weight: 600;">
-          Total : <span class="total">{{ listScore.length }} Score</span>
+          Total : <span class="total">{{ listScore.length }} Solicitudes</span>
         </div>
       </div>
 
