--- a/src/app/views/pages/score/registro-score/modal-score/modal-score.component.scss
+++ b/src/app/views/pages/score/registro-score/modal-score/modal-score.component.scss
@@ -45,6 +45,14 @@
   color: #97999b;
 }
 
+.id-version {
+  color: #97999b;
+  border: solid 1px #0daef4;
+  border-radius: 10px;
+  padding: 0px 4px;
+  // padding: 2px 3px;
+}
+
 .obs-score{
   min-width: 245px;color: #878f96;text-align: left;
 }
@@ -65,7 +73,7 @@
   }
 }
 
-.btn-obs-color{
+.btn-obs{
   // background-color: $color-blue;
   color: #007bff;
   transition: ease 0.3s;
@@ -85,13 +93,6 @@
   border: solid 1px #0dcaf0;
 }
 
-// .info {
-//   align-items: center;
-//   justify-content: center;
-//   height: 20px;
-//   font-size: 15px;
-// }
-
 .cli-user{
   display: flex;
   align-items: center;
@@ -110,22 +111,39 @@
   background-color: #398bf7;
 }
 
-.estado-reg {
-  background-color: #b5bec6;
+// Estados del score detalle
+// .est-sol {
+//   background-color: #88f5d4;
+//   color: #6f42c1;
+// }
+
+.est-sol {
+  background-color: #0dcaf0;
+  padding: 3.5px 19px;
+  color: #fff;
 }
 
-.estado-compl {
-  background-color: #88f5d4;
-  color: #6f42c1;
-}
-
-.estado-planif {
+.est-usu-inac {
   background-color: #ffdc73;
+  padding: 3.5px 5px;
   color: #6f42c1;
 }
 
-.estado-pend {
+.est-no-exit-lb {
   background-color: #ff727f;
+  padding: 3.5px 16px;
+}
+
+.est-observado {
+  background-color: #f200ff94;
+  padding: 3.5px 19px;
+  color: #fff;
+}
+
+.est-enviado {
+  background-color: #88f5d4;
+  padding: 3.5px 25px;
+  color: #6c757d;
 }
 
 .btn-hardware {
