--- a/src/app/views/pages/score/registro-score/modal-score/modal-score.component.html
+++ b/src/app/views/pages/score/registro-score/modal-score/modal-score.component.html
@@ -181,11 +181,14 @@
                               <th>Q Lineas</th>
                               <th>Cód. Financ.</th>
                               <th>ID REQ.</th>
+                              <th>Nombre REQ.</th>
                               <th>Fecha Proceso</th>
                               <th>Analista</th>
                               <th>Cargo Fijo Máx.</th>
+                              <th>Financiamiento</th>
                               <th>Estado</th>
-                              <th>Observación.</th>
+                              <th>Comentario.</th>
+                              <th>Observ. Gestor TDP.</th>
                             </tr>
                           </thead>
 
@@ -205,9 +208,11 @@
                             <td style="min-width: 85px;" >{{ score.q_lineas }}</td>
                             <td style="min-width: 90px;" >{{ score.codigo_fin }}</td>
                             <td style="min-width: 90px;" >{{ score.idrequerimiento }}</td>
+                            <td style="min-width: 110px;">{{ score.nombreReq }}</td>
                             <td style="min-width: 110px">{{ score.fecha_proceso }}</td>
                             <td style="min-width: 200px;">{{ score.solicitante }}</td>
                             <td style="min-width: 120px;">{{ score.cargo_fijo_max }}</td>
+                            <td style="min-width: 80px;" >{{ score.financiamiento }}</td>
                             <td style="min-width: 118px;">
                               <span *ngIf="score.estado == 'Solicitado'"       class="label est-sol">         {{ score.estado | uppercase }}</span>
                               <span *ngIf="score.estado == 'Usuario Ináctivo'" class="label est-usu-inac">    {{ score.estado | uppercase }}</span>
@@ -222,17 +227,18 @@
                               <span style="align-items: center; display: flex" *ngIf="score.estado == 'Enviado'"         ><mat-icon class="icon-13 icon-btn" style="margin-right: 5px; display: flex; color: #71e7ff;">radio_button_checked</mat-icon>{{ score.estado | uppercase}}</span> -->
 
                             </td>
+                            <td style="min-width: 220px; text-align: left;">{{ score.observacion }}</td>
                             <td class="obs-score">
-                              <ng-container *ngIf="authService.esUsuarioGestor() && score.estado == 'Solicitado' || score.estado == 'Observado'">
+                              <ng-container *ngIf="authService.esUsuarioGestor() ||score.estado == 'Solicitado' || score.estado == 'Observado'">
                                 <div style="display: flex">
-                                  <button
+                                  <button *ngIf="!authService.esUsuarioSolicitante()"
                                     class="btn-obs btn-obs"
                                     style="margin: 0"
                                     type="button"
                                     (click)="asignarObservacion(score)"
                                     matTooltip="Actualizar"
                                     ><mat-icon class="icon-13">loupe</mat-icon>
-                                  </button>{{ score.observacion }}
+                                  </button>{{ score.observacion_solicitante }}
                               </div>
                               </ng-container>
                             </td>
@@ -339,31 +345,33 @@
 
     <!-- --------------------------------------------BOTONES ------------------------------------------>
     <div class="cli-form-buttons">
-      <button
+      <!-- <button
          class="cli-btn btn-m btn-cancel"
          type="submit" (click)="close()">
         <mat-icon class="icon-18">cancel</mat-icon> Cancelar
-      </button>
+      </button> -->
 
       <ng-container *ngIf="DATA_SCORE">
-        <ng-container *ngIf="authService.esUsuarioSolicitante() && scoreForm.controls['id_estado_m'].value == 1 || scoreForm.controls['id_estado_m'].value == 4 ">
+        <ng-container *ngIf="authService.esUsuarioSolicitante()
+                      && scoreForm.controls['id_estado_m'].value == 1 || scoreForm.controls['id_estado_m'].value == 4
+                      && !authService.esUsuarioGestor()">
           <button
              [disabled]="existeRegistros"
              class="cli-btn btn-m btn-sol-score"
-             type="submit" (click)="cambiarAestadoSolicitado()">
+             type="submit" (click)="cambiarEstadoScoreM('SOLICITADO')">
             <mat-icon class="icon-18">credit_score</mat-icon> Solicitar Score
           </button>
         </ng-container>
 
-        <ng-container *ngIf="authService.esUsuarioGestor()">
+        <ng-container *ngIf="(authService.esUsuarioGestor() && (scoreForm.controls['id_estado_m'].value == 3 || scoreForm.controls['id_estado_m'].value == 2))">
           <button
              class="cli-btn btn-m btn-optional"
-             type="submit" (click)="close()">
+             type="submit" (click)="cambiarEstadoScoreM('OBSERVADO')">
             <mat-icon class="icon-18">cancel</mat-icon> Observado
           </button>
         </ng-container>
 
-        <ng-container *ngIf="authService.esUsuarioGestor() && scoreForm.controls['id_estado_m'].value == 3">
+        <ng-container *ngIf="authService.esUsuarioGestor() && scoreForm.controls['id_estado_m'].value == 6">
           <button
              class="cli-btn btn-m btn-mail"
              type="submit" (click)="close()">
@@ -372,12 +380,18 @@
         </ng-container>
       </ng-container>
 
-      <button
-         class="cli-btn btn-m btn-mora"
-         (click)="crearOactualizarScore()"
-         [disabled]="scoreForm.invalid">
-         <mat-icon class="icon-18">save</mat-icon> {{ actionBtn }}
-      </button>
+      <ng-container *ngIf="(authService.esUsuarioSolicitante()
+                    && scoreForm.controls['id_estado_m'].value == 1) || !DATA_SCORE
+              ">
+        <button
+           class="cli-btn btn-m btn-mora"
+           (click)="crearOactualizarScore()"
+           [disabled]="scoreForm.invalid">
+           <mat-icon class="icon-18">save</mat-icon> {{ actionBtn }}
+        </button>
+      </ng-container>
+
+
     </div>
   </div>
 </form>
