--- a/src/app/views/pages/score/registro-score/modal-score/modal-score.component.html
+++ b/src/app/views/pages/score/registro-score/modal-score/modal-score.component.html
@@ -175,9 +175,12 @@
                               <th>ID Score</th>
                               <th>Tipo Doc</th>
                               <th>N° Doc</th>
-                              <th>Segmento</th>
                               <th>Score</th>
-                              <!-- <th>Nombres Apell.</th> -->
+                              <th>Segmento</th>
+                              <th>Tipo Negocio</th>
+                              <th>Tipo Transacción</th>
+                              <th>Tipo de Venta</th>
+                              <th>Gama</th>
                               <th>Q Lineas</th>
                               <th>Cód. Financ.</th>
                               <th>ID REQ.</th>
@@ -202,14 +205,17 @@
                             <td style="min-width: 90px;">{{ score.idScored }}</td>
                             <td style="min-width: 80px;">{{ score.tipo_documento }}</td>
                             <td style="min-width: 100px;">{{ score.numero_documento }}</td>
-                            <td>{{ score.segmento }}</td>
                             <td class="w100">{{ score.score }}</td>
-                            <!-- <td style="min-width: 150px;">{{ score.nombres | uppercase }}</td> -->
+                            <td>{{ score.segmento }}</td>
+                            <td style="min-width: 95px;">{{ score.negocio_segmento }}</td>
+                            <td style="min-width: 95px;">{{ score.tipo_transaccion }}</td>
+                            <td style="min-width: 95px;">{{ score.tipo_venta }}</td>
+                            <td style="min-width: 95px;">{{ score.gama }}</td>
                             <td style="min-width: 85px;" >{{ score.q_lineas }}</td>
                             <td style="min-width: 90px;" >{{ score.codigo_fin }}</td>
                             <td style="min-width: 90px;" >{{ score.idrequerimiento }}</td>
-                            <td style="min-width: 110px;">{{ score.nombreReq }}</td>
-                            <td style="min-width: 110px">{{ score.fecha_proceso }}</td>
+                            <td style="min-width: 110px;">{{ score.nombre_req }}</td>
+                            <td style="min-width: 110px" >{{ score.fecha_proceso }}</td>
                             <td style="min-width: 200px;">{{ score.solicitante }}</td>
                             <td style="min-width: 120px;">{{ score.cargo_fijo_max }}</td>
                             <td style="min-width: 80px;" >{{ score.financiamiento }}</td>
@@ -227,7 +233,7 @@
                               <span style="align-items: center; display: flex" *ngIf="score.estado == 'Enviado'"         ><mat-icon class="icon-13 icon-btn" style="margin-right: 5px; display: flex; color: #71e7ff;">radio_button_checked</mat-icon>{{ score.estado | uppercase}}</span> -->
 
                             </td>
-                            <td style="min-width: 220px; text-align: left;">{{ score.observacion }}</td>
+                            <td style="min-width: 220px; text-align: left;">{{ score.observacion_solic }}</td>
                             <td class="obs-score">
                               <ng-container *ngIf="authService.esUsuarioGestor() ||score.estado == 'Solicitado' || score.estado == 'Observado'">
                                 <div style="display: flex">
@@ -238,7 +244,7 @@
                                     (click)="asignarObservacion(score)"
                                     matTooltip="Actualizar"
                                     ><mat-icon class="icon-13">loupe</mat-icon>
-                                  </button>{{ score.observacion_solicitante }}
+                                  </button>{{ score.observacion_gestor }}
                               </div>
                               </ng-container>
                             </td>
