--- a/src/app/views/pages/score/registro-score/modal-score/modal-score.component.scss
+++ b/src/app/views/pages/score/registro-score/modal-score/modal-score.component.scss
@@ -118,7 +118,8 @@
 // }
 
 .est-sol {
-  background-color: #0dcaf0;
+  // background-color: #0dcaf0;
+  background-color: #4a93ffd4;
   padding: 3.5px 19px;
   color: #fff;
 }
