--- a/src/app/views/pages/score/registro-score/registro-score.component.html
+++ b/src/app/views/pages/score/registro-score/registro-score.component.html
@@ -86,7 +86,7 @@
           <thead>
             <!-- <tr class="bgc-green c-white"> -->
             <!-- <tr class="bgc-purple c-white"> -->
-            <tr class="bgc-orange c-white">
+            <tr class="bgc-turquey c-white">
               <th>Acción</th>
               <th>ID Score</th>
               <th>Solicitante</th>
@@ -129,7 +129,15 @@
               <td class="w100">{{ score.fecha_envio }}</td>
               <td class="w100">{{ score.envio }}</td>
               <!-- <td class="w100">{{ score.carga }}</td> -->
-              <td>{{ score.estado}}</td>
+              <td>
+                <span *ngIf="score.estado == 'Registrado'"    class="label est-reg">  {{ score.estado | uppercase }}</span>
+                <span *ngIf="score.estado == 'En Validación'" class="label est-valid">{{ score.estado | uppercase }}</span>
+                <span *ngIf="score.estado == 'Solicitado'"    class="label est-sol "> {{ score.estado | uppercase }}</span>
+                <span *ngIf="score.estado == 'Observado'"     class="label est-obs "> {{ score.estado | uppercase }}</span>
+                <span *ngIf="score.estado == 'Aprobado'"      class="label est-aprobado">    {{ score.estado | uppercase }}</span>
+                <span *ngIf="score.estado == 'Enviado'"       class="label est-enviado ">    {{ score.estado | uppercase }}</span>
+              </td>
+
               <td style="min-width: 95px;">{{ score.fecha_crea }}</td>
               <td style="min-width: 100px;">{{ score.Actualiza }}</td>
               <td style="min-width: 115px">{{ score.fecha_actualizacion }}</td>
