--- a/src/assets/styles/buttons.scss
+++ b/src/assets/styles/buttons.scss
@@ -183,7 +183,7 @@
   color: #fff;
   transition: ease 0.3s;
   &:hover:enabled {
-    background-color: #009aff5e;
+    background-color: #c8aaff;
   }
   &:hover:enabled:active {
     background-color: #9662f6;
