Carga de DATA SCORE_D  de ambas BD

--- a/src/app/views/pages/score/registro-score/modal-score/asignar-observacion/asignar-observacion.component.html
+++ b/src/app/views/pages/score/registro-score/modal-score/asignar-observacion/asignar-observacion.component.html
@@ -24,7 +24,7 @@
       </div>
 
 
-      <!-- REGISTRAR PERIODO DE LAS VACACIONES---------------------------------------------------------- -->
+      <!-- OBSERVAR Y CAMBIAR DE ESTADO POR OBS---------------------------------------------------------- -->
         <div class="pr-module-container">
           <div class="row g-3">
             <div class="col-sm-12 cli-form-element">
@@ -35,7 +35,7 @@
               </select>
             </div>
 
-            <div class="cli-form-element mb-2" *ngIf="asigObservacionForm.controls['id_estado_d'].value == 4">
+            <div class="cli-form-element mb-2" *ngIf="asigObservacionForm.controls['id_estado_d'].value == 5">
               <label>Obervación Gestor TDP*</label>
               <textarea
                 class="form-control"
