--- a/src/app/views/pages/score/registro-score/modal-score/modal-score.component.scss
+++ b/src/app/views/pages/score/registro-score/modal-score/modal-score.component.scss
@@ -186,6 +186,20 @@
   color: #6c757d;
 }
 
+.est-CantLinEr {
+  background-color: #0dcaf0;
+  padding: 3.5px 19px;
+  color: #FFF;
+}
+
+.est-CapFinEr {
+  background-color: #96a4b0;
+  padding: 3.5px 22px;
+  color: #FFFF;
+}
+
+
+
 .btn-hardware {
   border: none;
   border-radius: 2px;
